--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
 
-apply plugin: "androidx.navigation.safeargs.kotlin"
-
 android {
     compileSdk 32
 
@@ -24,10 +22,29 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            applicationIdSuffix ".debug"
+            debuggable true
+        }
     }
-
-    buildTypes.each {
-        it.buildConfigField 'String', 'BASE_URL', BASE_URL
+    flavorDimensions "color"
+    productFlavors {
+        redCamera {
+            applicationIdSuffix ".red.camera"
+            manifestPlaceholders = [appTheme: "@style/AppThemeRed"]
+        }
+        redFiles {
+            applicationIdSuffix ".red.files"
+            manifestPlaceholders = [appTheme: "@style/AppThemeRed"]
+        }
+        greenCamera {
+            applicationIdSuffix ".green.cam"
+            manifestPlaceholders = [appTheme: "@style/AppThemeGreen"]
+        }
+        greenFiles {
+            applicationIdSuffix ".green.files"
+            manifestPlaceholders = [appTheme: "@style/AppThemeGreen"]
+        }
     }
 
     buildFeatures {
@@ -58,7 +75,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
     def lifecycle_version = '2.4.0'
@@ -71,13 +87,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.7.0-alpha03'
 
-    def navigation_version = '2.4.2'
-
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -88,13 +97,6 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation "androidx.core:core-ktx:1.8.0"
-
-    def glide_version = '4.12.0'
-
-    implementation "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
-
-    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     def dagger2_version = '2.42'
 
@@ -132,31 +134,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    implementation 'com.github.andrefrsousa:SuperBottomSheet:1.5.0'
+    implementation 'androidx.activity:activity-ktx:1.3.1'
 
-    def room_version = "2.4.2"
+    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
 
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    testImplementation "androidx.room:room-testing:$room_version"
+    implementation "com.github.permissions-dispatcher:permissionsdispatcher:4.8.0"
+    kapt "com.github.permissions-dispatcher:permissionsdispatcher-processor:4.8.0"
 
-    implementation "androidx.room:room-ktx:$room_version"
-    implementation "androidx.room:room-rxjava2:$room_version"
-    implementation "androidx.room:room-paging:$room_version"
-
-    // OkHttp 3
-    implementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
-
-    // Retrofit
-    def retrofit = "2.9.0"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
-
-    // Paging Adapter
-    def paging_version = "3.1.1"
-    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
-
-    //Facebook Shimmer
-    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'net.objecthunter:exp4j:0.4.8'
 }
